--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -18,3 +18,20 @@
   border-style: solid;
   border-width: 1px;
 }
+
+.input {
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.biginput {
+  min-height: 100px;
+  min-width: 200px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.index {
+  text-align: center;
+}
