Add title to each page.

--- a/app/views/list/view.html.erb
+++ b/app/views/list/view.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, @list.human_name %>
+
 <div class='newsletter'>
   <h1>
     <a class='title' href='https://twitter.com/<%= @list.username %>/lists/<%= @list.name %>'>
